# Grimoire-kit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.fr.md  README.md  SECURITY.md  _gen_tests.py  bmad-init.sh  grimoire-init.sh  grimoire.sh  install.sh  mkdocs.yml  package.json  project-context.tpl.yaml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  docs-improvement.yml  feature-request.yml  performance-regression.yml
.github/hooks/: grimoire-rtk-rewrite.json
.github/security/: dependency-waivers.yaml
.github/workflows/: agentic-standard.yml  auto-label.yml  ci-sdk.yml  ci-validate.yml  cleanup-branches.yml  codeql-analysis.yml  docs.yml  npm-publish.yml  publish.yml  release.yml  stale.yml  weekly-bench.yml
_bmad-output/: .router-stats.jsonl
_bmad/_memory/: bmad.json  mcp-audit.jsonl  token-usage.jsonl
_grimoire-output/: .router-stats.jsonl  Grimoire_TRACE.md
_grimoire-output/bench-reports/: 2026-03-02.md  2026-03-09.md  2026-03-16.md  2026-03-23.md  2026-03-30.md  2026-04-06.md  2026-04-13.md  2026-04-20.md  2026-04-27.md  2026-05-04.md  2026-05-11.md  2026-05-18.md  2026-05-25.md  2026-06-01.md  2026-06-08.md  2026-06-15.md  2026-06-22.md  2026-06-29.md  2026-07-06.md  2026-07-13.md  2026-07-20.md  latest.md
_grimoire/_memory/: contradiction-log.md  failure-museum.md  grimoire.json  mcp-audit.jsonl  mem0-bridge.py  palace_sidecar.sqlite3  requirements-full.txt  shared-context.md
adapters/grimoire-mcp/: README.md  package.json  tsconfig.json
apps/grimoire-dashboard/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/grimoire-game/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
archetypes/agentic-standard/: archetype.dna.yaml  shared-context.tpl.md
archetypes/creative-studio/: archetype.dna.yaml  shared-context.tpl.md
archetypes/fix-loop/: README.md  archetype.dna.yaml
archetypes/game-dev/: archetype.dna.yaml  shared-context.tpl.md
archetypes/infra-ops/: archetype.dna.yaml  shared-context.tpl.md
archetypes/minimal/: archetype.dna.yaml
archetypes/platform-engineering/: archetype.dna.yaml  shared-context.tpl.md
archetypes/web-app/: archetype.dna.yaml  shared-context.tpl.md
docs/: adr-001-no-multi-llm.md  adr-002-semver-policy.md  adr-003-memory-duality.md  agentic-standard-benchmark-corpus-2026Q2.md  agentic-standard-final-target.md  agentic-standard-install-by-needs.md  agentic-standard-integration.md  agentic-standard-target-architecture.md  agentic-standard-target-plan.md  api-reference.md  archetype-guide.md  bmad-yaml-reference.md  changelog.md  cli-reference.md  concepts.md  config-reference.md  creating-agents.md  evals-protocol.md  extensions-marketplace.md  faq.md  framework-tools-inventory.md  game-dev-integration.md  gen-governed-controls.py  getting-started.md  governed-controls.md  grimoire-game-runtime-guardrails.md  grimoire-yaml-reference.md  index.md  mcp-integration.md  memory-os-roadmap.md  memory-system.md  migration-v2-v3.md  observatory-api.md  onboarding.md  pack-quickstart.md  plugin-development.md  presentation-decouverte.md  resorption-bash.md  rnd.md  sdk-guide.md  (+7 more)
evals/: README.md  collect.py
extensions/: README.md  extension.schema.json
framework/: FREEZE.md  adapter-contract.md  agent-base-compact.md  agent-base.md  agent-mesh-network.md  agent-relationship-graph.md  agent-rules.md  agent2agent.md  archetype-dna.schema.yaml  bmad-trace.md  cc-reference.md  cc-verify.sh  context-router.md  cross-validation-trust.md  delivery-contract.tpl.md  event-log-shared-state.md  grimoire-core.manifest.yaml  grimoire-trace.md  honest-uncertainty-protocol.md  hybrid-parallelism-engine.md  orchestrator-gateway.md  productive-conflict-engine.md  question-escalation-chain.md  selective-huddle-protocol.md  team-manifest.schema.yaml
mkdocs_data/: signals.yml
mkdocs_hooks/: signals.py
registry/: README.md
schemas/: blueprint-v1.schema.json
scripts/: check-code-ratchet.py  code-ratchet-baseline.json  depaudit-waivers.py  framework-usage-inventory.py  gen-demo-projects.py  gen-extensions-table.py  gen-kit-coverage.py  gen-site-data.py  serve-site.sh
tests/: conftest.py  run-coverage.sh  smoke-test.sh  test_adversarial_consensus.py  test_agent_bench.py  test_agent_build.py  test_agent_caller.py  test_agent_darwinism.py  test_agent_debugger.py  test_agent_forge.py  test_agent_integrity.py  test_agent_lint.py  test_agent_task_system.py  test_agent_test.py  test_agent_watch.py  test_agent_worker.py  test_agentic_standard.py  test_antifragile_score.py  test_archetype_resolver.py  test_auto_doc.py  test_auto_index.py  test_background_tasks.py  test_bias_toolkit.py  test_bmad_mcp_tools.py  test_bug_finder.py  test_cc_feedback.py  test_cmd_blueprint.py  test_cmd_cockpit.py  test_cmd_init.py  test_cmd_up.py  test_cockpit_scan.py  test_code_review.py  test_cognitive_flywheel.py  test_compiled_flow.py  test_concierge.py  test_context_guard.py  test_context_guard_advanced.py  test_context_isolator.py  test_context_merge.py  test_context_router.py  (+113 more)
web/: DESIGN-BRIEF-memory.md  DESIGN-BRIEF-observability.md  anatomy.html  atelier-nav.js  atelier.css  atelier.html  blueprint-onboarding.js  blueprint.html  blueprints.html  bp2-assist.js  bp2-composer.js  bp2-core.js  bp2-cost.js  bp2-docs.js  bp2-library.js  bp2-team.css  bp2-team.js  bp2-tour.js  bp2.css  data-loader.js  demo.html  documentation.html  extensions.html  forge-base.css  forge-blueprint.js  forge-charts.css  forge-docs.css  forge-docs.js  forge-landing.css  forge-motion.css  forge-motion.js  forge-nav.js  forge-observatory.js  forge-tokens.css  game-ui.html  grimoire-mode.js  index.html  kanban.html  kit-base.css  kit-motion.css  (+9 more)
web/data/: meta.json  (+9 more)
(+1046 files in other folders)
