[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grimoire-kit"
dynamic = ["version"]
description = "Composable AI agent platform — personas, memory, workflows, and quality automation for any project."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Guilhem Bonnet" }]
keywords = ["ai", "agents", "llm", "workflow", "copilot", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Typing :: Typed",
]

dependencies = [
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
qdrant = ["qdrant-client>=1.9", "sentence-transformers>=3.0"]
ollama = ["ollama>=0.3"]
all = ["grimoire-kit[mcp,qdrant,ollama]"]
dev = [
    "grimoire-kit[all]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
grimoire = "grimoire.cli.app:cli"
grimoire-mcp = "grimoire.mcp.server:main"

[project.entry-points."grimoire.tools"]
[project.entry-points."grimoire.backends"]

[project.urls]
Homepage = "https://github.com/Guilhem-Bonnet/Grimoire-kit"
Repository = "https://github.com/Guilhem-Bonnet/Grimoire-kit"
Documentation = "https://guilhem-bonnet.github.io/Grimoire-kit/"
Changelog = "https://github.com/Guilhem-Bonnet/Grimoire-kit/blob/main/CHANGELOG.md"
Issues = "https://github.com/Guilhem-Bonnet/Grimoire-kit/issues"

[tool.hatch.version]
path = "src/grimoire/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/grimoire"]

[tool.hatch.build.targets.wheel.force-include]
"archetypes" = "grimoire/archetypes"
"framework" = "grimoire/data/framework"

[tool.hatch.build.targets.sdist]
include = [
    "src/grimoire/",
    "archetypes/",
    "framework/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
# Ruff configuration lives in ruff.toml — single source of truth.

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["_grimoire/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short -x"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests requiring external services (network, Ollama, Qdrant)",
    "regression: marks known regression tests",
    "bench: marks performance benchmark tests",
]

[tool.coverage.run]
source = ["src/grimoire"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 70
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
